@@ -1,3 +1,7 @@
+2017-08-02  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* contrib/adc-gnu-linux.c: New.
+
 2017-07-07  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* mcu/usb-usbip.c (usbip_handle_data_urb): Fix error return value.
